ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /grafana/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: grafana
            port:
              number: 9091
      - path: /prometheus/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-service
            port:
              number: 9090
